moved stuff back

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -477,8 +477,8 @@ folkis_educates_desc;An efficient and modern compulsory school system is educati
 force_publique;Force Publique;;;;;;;;;;;;;x
 forced_expulsion;Expulsion Horrors;;;;;;;;;;;;;x
 forced_expulsion_desc;The local government of this province is forcibly moving parts of population out of it.;;;;;;;;;;;;;x
-forceful_back_to_africa;Back to Africa Act;;;;;;;;;;;;;;;;;;x
-forceful_back_to_africa_desc;Without the shackles of the democratic rules, the government has declared an order for the forceful repatriation of all African diaspora cultures in our country.;;;;;;;;;;;;;;;;;;x
+forceful_back_to_africa;Back to Africa Act;;;;;;;;;;;;;;;;;;;x
+forceful_back_to_africa_desc;Without the shackles of the democratic rules, the government has declared an order for the forceful repatriation of all African diaspora cultures in our country.;;;;;;;;;;;;;;;;;;;x
 foreign_claims;Foreign Claims;;;;;;;;;;;;;x
 foreign_claims_desc;Another nation is claiming this province, a claim that they will lose soon enough.;;;;;;;;;;;;;x
 foreign_smugglers;Foreign Smugglers;;;;;;;;;;;;;x
@@ -536,6 +536,8 @@ gauche_buffoon_desc;For the love of God, don’t let our leader interact with fore
 generalised_debt_default;Generalized Debt Default;;;;;;;;;;;;;x
 generic_neutrality;Political Neutrality;;;;;;;;;;;;;x
 generic_neutrality_desc;Our country deliberately takes no sides. We do not go to war, even against those the world universally reviles, and thus expect that no one shall go to war against us. This means we will likely never achieve recognition as a ‘mover and shaker’, but it also protects us. We shall not abandon our principles for the sake of power and influence.;;;;;;;;;;;;;x
+genocide;Systematic Extermination;;;;;;;;;;;;;x
+genocide_desc;Our aggressive policies against minorities are promoting a shift in our country.;;;;;;;;;;;;;x
 german-menace;The German Hun;;;;;;;;;;;;;x
 german-menace_desc;Being witness to the new rising power of Germany is a terrifing sight to behold. We must ready ourselves for conflict, if our nation wishes to survive.;;;;;;;;;;;;;x
 german_grain_imports;Germany Importing our Grain;;;;;;;;;;;;;x
@@ -665,7 +667,7 @@ jewish_diaspora;Jewish Diaspora;;;;;;;;;;;;;x
 jewish_diaspora_desc;The Jewish community is organizing in reaction to the creation of Israel.;;;;;;;;;;;;;x
 jewish_farms;Jewish Farmlands;;;;;;;;;;;;;x
 jewish_farms_desc;Jews who immigrated to Israel purchased land that was mostly semi-arid, although much had been rendered untillable by deforestation, soil erosion and neglect. They set about clearing rocky fields, constructing terraces, draining swampland, reforesting, counteracting soil erosion, and washing salty land. Since independence, the total area under cultivation has increased from 408,000 acres (1,650 sq. km) to 1,70,000 acres (4,300 sq. km), while the number of agricultural communities has increased from 400 to 725. Agricultural production has expanded 16 times, three times more than population growth.;;;;;;;;;;;;;x
-jim_crow;The Jim Crow Laws;;;;;;;;;;;;;x
+jim_crow;The Jim Crow Laws;;;;;;;;;;;;x
 jim_crow_desc;The Jim Crow laws mandate de jure racial segregation in all public facilities, with a supposedly 'separate but equal' status for black Americans.;;;;;;;;;;;;x
 jizya;Jizya;;;;;;;;;;;;;
 jizya_desc;The Jizya is a per capita yearly taxation historically levied in the form of financial charge on permanent non-Muslim subjects (dhimmi) in order to fund public expenditures of the state, in place of the Zakat and Khums that Muslims are obliged to pay. In return, the dhimmi are granted protected status under law.;;;;;;;;;;;;;
@@ -674,6 +676,8 @@ kalmar_union;Kalmar Union;;;;;;;;;;;;;x
 kalmar_union_desc;We have agreed in principle to a closer bond with the other Scandinavian nations.;;;;;;;;;;;;;x
 karadzic_reforms;Karadzic Reforms;;;;;;;;;;;;;x
 karadzic_reforms_desc;Vuk Karadzic has reformed language education in our schools. Our children can now learn the Serbian language more easily than before.;;;;;;;;;;;;;x
+remove_undesireables;Integration Policy;;;;;;;;;;;;;x
+remove_undesireables_desc;The violence unleashed by liberation wars against Muslim inhabitants of our lands is still felt today.;;;;;;;;;;;;;x
 kettler_denkmal;Memorial to Foreign Diplomat;;;;;;;;;;;;;x
 kettler_denkmal_desc;This memorial to a foreign diplomat stands as a permanent reminder to our people that our independence is being sold short by our government.;;;;;;;;;;;;;x
 kiel_canal;Kiel Canal;;;;;;;;;;;;;x
@@ -681,6 +685,8 @@ kiel_canal_construction;Kiel Canal Under Construction;;;;;;;;;;;;;x
 kiel_canal_construction_desc;Our nation is dedicating its resources to build a great Canal.;;;;;;;;;;;;;x
 kiel_canal_dividend;The Kiel Canal;;;;;;;;;;;;;x
 kiel_canal_dividend_desc;We own the Kiel Canal, linking the Baltic and the North Sea without the need to sail around Denmark, and we receive the dividends of its toll.;;;;;;;;;;;;;x
+killcommies;Do the Thing.;;;;;;;;;;;;;x
+killlandlords;No, the Other Thing.;;;;;;;;;;;;;x
 kinda_bad_badboy;International Sanctions;;;;;;;;;;;;;x
 kinda_bad_badboy_desc;We have been declared a threat to global safety and international balance of power. Sanctions have been applied to our country and citizens and we have been warned that the great powers will worsen these sanctions in case we continue our aggressiveness.;;;;;;;;;;;;;x
 king_cotton;King Cotton;;;;;;;;;;;;;x
@@ -1050,6 +1056,8 @@ power_vacuum;Power Vacuum;;;;;;;;;;;;;x
 power_vacuum_desc;The government is in a state of transition as it struggles to find its new leader? or fall in the process.;;;;;;;;;;;;;x
 preparations_for_war;Preparations for War;;;;;;;;;;;;;x
 preparations_for_war_desc;There’s an incoming war, or so some say.;;;;;;;;;;;;;x
+preparations_to_kill;Concentration Camps;;;;;;;;;;;;;x
+preparations_to_kill_desc;We are solving the minorities problem in our country. Minorities are being sorted out in concentration camps and waiting for their fate, or being delivered to it already.;;;;;;;;;;;;;x
 preparing_for_war;Preparing for War;;;;;;;;;;;;;x
 preparing_for_war_desc;War with the North is inevitable and we must be ready for it.;;;;;;;;;;;;;x
 prince_of_terror;Prince of Terror;;;;;;;;;;;;;x
@@ -1608,15 +1616,15 @@ renovating_city;Renovating City;;;;;;;;;;;;;x
 renovating_city_desc;The city is under renovation, hopefully it doesn't take long.;;;;;;;;;;;;;x
 forced_vaccination;Compulsory Vaccination;;;;;;;;;;;;;x
 forced_vaccination_desc;;;;;;;;;;;;;;x
-antonio_conselheiro;Antônio Conselheiro;;;;;;;;;;;;;x
+antonio_conselheiro;Antônio Conselheiro;;;;;;;;;;;;;;x
 antonio_conselheiro_desc;Antônio Conselheiro now holds an important hole as counselor to the theocracy, which is fitting giving his surname.;;;;;;;;;;;;;x
-favelas;Favelas;;;;;;;;;;;;;x
+favelas;Favelas;;;;;;;;;;;;;;x
 favelas_desc;With the lack of proper housing, the poorest citizens, for a reason or another, end up in Favelas, crowded and poorly maintained housing on the outskirts of the city, usually on cliffsides and other places nobody else wants to build in.;;;;;;;;;;;;;;
-building_brasilia;Building Brasilia;;;;;;;;;;;;;x
-building_brasilia_desc;Our new capital is being built;;;;;;;;;;;;;x
-wild_puppet_debuff;Wild Puppet;;;;;;;;;;;;;x
-wild_puppet_debuff_desc;Our Overlord is trying to actively undermind us! Outrageous!;;;;;;;;;;;;;x
-wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;x
-wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;x
-tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;x
-tourism_campaign_desc;§YCampaign Cost:§! Roughly §R20%§! of your maximum monthly tax income, every month.;;;;;;;;;;;;;x
+building_brasilia;Building Brasilia;;;;;;;;;;;;;;
+building_brasilia_desc;Our new capital is being built;;;;;;;;;;;;;;
+wild_puppet_debuff;Wild Puppet;;;;;;;;;;;;;;
+wild_puppet_debuff_desc;Our Overlord is trying to actively undermind us! Outrageous!;;;;;;;;;;;;;;
+wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;;
+wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;;
+tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;;
+tourism_campaign_desc;;;;;;;;;;;;;;;
