--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -2733,8 +2733,8 @@ test_dec_desc;This Decision is for testing purposes.;;;;;;;;;;;;;x
 test_dec_title;Debug: Test Decision;;;;;;;;;;;;;x
 tex_claim_rio_grande_desc;Proper Texan lands pass across the banks of the Rio Grande into what is considered Mexican territory. We, as a now independent nation, can claim the whole of the Rio Grande region for our own, and make it Texan as it should be.;;;;;;;;;;;;;x
 tex_claim_rio_grande_title;Claim the Rio Grande;;;;;;;;;;;;;x
-tex_commission_flag_title;Commission a new flag for the Republic of Texas
-tex_commission_flag_desc;Most Texans use a modified American flag, with 13 stripes and a single Lone Star in the blue canton. We may find it in our interests to commission a new flag that would better symbolize the independence of the Republic of Texas.
+tex_commission_flag_title;Commission a new flag for Texas;;;;;;;;;;;;;x
+tex_commission_flag_desc;Most Texans use a modified American flag, with 13 stripes and a single Lone Star in the blue canton. We may find it in our interests to commission a new flag that would better symbolize the independence of the Republic of Texas.;;;;;;;;;;;;;x
 tex_final_independence_desc;Long has the United States of America laid claim to Texan lands, and many within Texas believe that it is in our best interests to submit their their notions of a vast republican empire spanning the North American continent. However, we will not let another flag fly on Texan soil, and just as our forefathers fought to keep this country free, so will we do our part. We have enough political clout now to convince the great powers of the world that the USA has no right to claim Texan soil - though the Americans will certainly not appreciate this move.;;;;;;;;;;;;;x
 tex_final_independence_title;Declare Independence;;;;;;;;;;;;;x
 tex_support_csa_desc;With America divided between the Northern Union and the Southern Confederates, we should cast our lot in this great Civil War. Since we have long had ties to the Southern states, perhaps we should ally with them, though considering that this will quickly draw our country to war, the Texan people may not look on this decision too fondly.;;;;;;;;;;;;;x
