--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -896,7 +896,9 @@ national_confusion_desc;There has been a great deal of change in our country. It
 national_instability;National Instability;;;;;;;;;;;;;x
 national_instability_desc;The country is in a state of turmoil, and is in danger of rebellions.;;;;;;;;;;;;;x
 national_rifles;National Rifle Association;;;;;;;;;;;;;x
+national_rifle_desc;;;;;;;;;;;;;;x
 national_speech;National Speech;;;;;;;;;;;;;x
+national_speech;We just had a moving speech by our Leader.;;;;;;;;;;;;;x
 national_tragedy;National Tragedy;;;;;;;;;;;;;x
 national_tragedy_desc;Our nation mourns another young girl lost to the coal fields.;;;;;;;;;;;;;x
 national_workshops;National Workshops;;;;;;;;;;;;;x
@@ -1627,4 +1629,4 @@ wild_puppet_debuff_desc;Our Overlord is trying to actively undermind us! Outrage
 wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;;
 wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;;
 tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;;
-tourism_campaign_desc;;;;;;;;;;;;;;;
+tourism_campaign_desc;We are giving incentives to new settlers.;;;;;;;;;;;;;;
