--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -164,6 +164,10 @@ establish_protectorate_casus_belli;Establish Protectorate;Établir un protectorat
 establish_protectorate_casus_belli_desc;Annex an §Yuncivilized country§W by forcing them to become a protectorate of ours.;Annexez un §Ypays non civilisé§W en l'obligeant à devenir l'un de nos protectorats.;Annektieren Sie ein §Yunzivilisiertes Land§W, indem Sie es zwingen, eines Ihrer Protektorate zu werden.;;;;;;;;;;;x
 establish_protectorate_casus_belli_setup;Annex $RECIPIENT$ by establishing a protectorate over them.;Annexez $RECIPIENT$ en établissant un protectorat.;Annektieren Sie $RECIPIENT$ durch die Gründung eines Protektorats.;;;;;;;;;;;x
 establish_protectorate_casus_belli_short;Annex $RECIPIENT$;Annexer $RECIPIENT$;Annektieren Sie $RECIPIENT$;;;;;;;;;;;x
+establish_protectorate_casus_belli_triggered;Establish Protectorate;Établir un protectorat;Protektorat gründen;;;;;;;;;;;x
+establish_protectorate_casus_belli_triggered_desc;Annex an §Yuncivilized country§W by forcing them to become a protectorate of ours.;Annexez un §Ypays non civilisé§W en l'obligeant à devenir l'un de nos protectorats.;Annektieren Sie ein §Yunzivilisiertes Land§W, indem Sie es zwingen, eines Ihrer Protektorate zu werden.;;;;;;;;;;;x
+establish_protectorate_casus_belli_triggered_setup;Annex $RECIPIENT$ by establishing a protectorate over them.;Annexez $RECIPIENT$ en établissant un protectorat.;Annektieren Sie $RECIPIENT$ durch die Gründung eines Protektorats.;;;;;;;;;;;x
+establish_protectorate_casus_belli_triggered_short;Annex $RECIPIENT$;Annexer $RECIPIENT$;Annektieren Sie $RECIPIENT$;;;;;;;;;;;x
 free_allied_cores;Free Allied Cores;Peuple libre;Freies Volk;;;;;;;;;;;x
 free_allied_cores_desc;Liberate cores belonging to an §Yallied country§W in your sphere;Libérer un §Ypays§W de ses oppresseurs;Befreien Sie ein §YLand§W von seinen Unterdrückern.;;;;;;;;;;;x
 free_allied_cores_setup;Hand $STATE$ back to $THIRD$ from $RECIPIENT$;Prendre $STATE$ à $RECIPIENT$ pour le rendre à $THIRD$;Geben Sie $STATE$ an $THIRD$ von $RECIPIENT$ zurück;;;;;;;;;;;x
