--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1630,3 +1630,5 @@ wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;;
 wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;;
 tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;;
 tourism_campaign_desc;We are giving incentives to new settlers.;;;;;;;;;;;;;;
+paraguay_is_ours;Paraguay is ours!;;;;;;;;;;;;;;
+cisplatina_is_ours;Cisplatina is ours!;;;;;;;;;;;;;;
