--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1929,7 +1929,7 @@ RUS_absolute_monarchy2;Russian Empire;Empire russe;Russisches Zarenreich;;;;;;;;
 RUS_democracy;Russian Federative Republic;;;;;;;;;;;;;x
 RUS_hms_government;Russian Empire;;;;;;;;;;;;;x
 RUS_hms_government2;Russian Empire;;;;;;;;;;;;;x
-RUS_proletarian_dictatorship;Union of Soviet Socialist Republics;;;;;;;;;;;;;x
+RUS_proletarian_dictatorship;Russian Soviet Federative Socialist Republic;;;;;;;;;;;;;x
 RUS_prussian_constitutionalism;Russian Empire;Empire russe;Russisches Zarenreich;;;;;;;;;;;x
 RUS_prussian_constitutionalism2;Russian Empire;Empire russe;Russisches Zarenreich;;;;;;;;;;;x
 RUT_democracy;West Ukraine;;;;;;;;;;;;;x
