fixed image so no more crash

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -719,10 +719,12 @@ COU_prussian_constitutionalism;Grand Duchy of Courland;;;;;;;;;;;;;x
 COU_absolute_monarchy;Grand Duchy of Courland;;;;;;;;;;;;;x
 CPL_absolute_monarchy;Poland;;;;;;;;;;;;;x
 CPL_colonial_company;Congress Poland;;;;;;;;;;;;;x
-CPL_dominion;Congress Poland;;;;;;;;;;;;;x
+CPL_dominion;Grand Duchy of Poland;;;;;;;;;;;;;x
 CPL_hms_government;Poland;;;;;;;;;;;;;x
 CPL_prussian_constitutionalism;Poland;;;;;;;;;;;;;x
 CPL_presidential_dictatorship;Provisional National Government;;;;;;;;;;;;;x
+CPL_colonial_company;Kingdom of Poland;;;;;;;;;;;;;x
+CPL_dominion;Duchy of Warsaw;;;;;;;;;;;;;x
 POL_presidential_dictatorship;Provisional National Government;;;;;;;;;;;;;x
 CRB_absolute_monarchy;Caribbean Federation;;;;;;;;;;;;;x
 CRB_colonial_company;Leeward Islands Colony;;;;;;;;;;;;;x
