--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -723,8 +723,8 @@ CPL_dominion;Grand Duchy of Poland;;;;;;;;;;;;;x
 CPL_hms_government;Poland;;;;;;;;;;;;;x
 CPL_prussian_constitutionalism;Poland;;;;;;;;;;;;;x
 CPL_presidential_dictatorship;Provisional National Government;;;;;;;;;;;;;x
-CPL_colonial_company;Kingdom of Poland;;;;;;;;;;;;;x
-CPL_dominion;Duchy of Warsaw;;;;;;;;;;;;;x
+POL_colonial_company;Kingdom of Poland;;;;;;;;;;;;;x
+POL_dominion;Duchy of Warsaw;;;;;;;;;;;;;x
 POL_presidential_dictatorship;Provisional National Government;;;;;;;;;;;;;x
 CRB_absolute_monarchy;Caribbean Federation;;;;;;;;;;;;;x
 CRB_colonial_company;Leeward Islands Colony;;;;;;;;;;;;;x
@@ -1826,8 +1826,6 @@ PNJ_democracy;Khalistan;;;;;;;;;;;;;x
 PNJ_fascist_dictatorship;Khalistan;;;;;;;;;;;;;x
 PNJ_hms_government;Sikh Kingdom;;;;;;;;;;;;;x
 PNJ_prussian_constitutionalism;Sikh Empire;;;;;;;;;;;;;x
-POL_colonial_company;Generalgouvernement;;;;;;;;;;;;;x
-POL_dominion;Generalgouvernement;;;;;;;;;;;;;x
 PPG_colonial_company;Neuguinea;;;;;;;;;;;;;x
 PRI_colonial_company;Captaincy General of Puerto Rico;;;;;;;;;;;;;x
 PRI_democracy;Republic of Puerto Rico;;;;;;;;;;;;;x
