small loc changes

--- a/TGC/localisation/00_pop-culture.csv
+++ b/TGC/localisation/00_pop-culture.csv
@@ -47,6 +47,7 @@ azerbaijani;Azeri;;;;;;;;;;;;;x
 baganda;Baganda;Baganda;Baganda;;;;;;;;;;;x
 baguirmi;Maban;;;;;;;;;;;;;x
 bakongo;Bakongo;Bakongo;Bakongo;;;;;;;;;;;x
+baltic_german;Baltic German;;;;;;;;;;;;;x
 baluchi;Baluchi;Baloutche;Baluchisch;;;;;;;;;;;x
 bambara;Bambara;Bambara;Bambara;;;;;;;;;;;x
 basque;Basque;Basque;Baskisch;;;;;;;;;;;x
@@ -170,10 +171,12 @@ jarrillero;Widukanche;;;;;;;;;;;;;x
 javan;Javan;Javanais;Javanisch;;;;;;;;;;;x
 juhuri;Juhuri;;;;;;;;;;;;;x
 kachin;Kachin;Kachin;Kachin;;;;;;;;;;;x
+kalmyk;Kalmyk;;;;;;;;;;;;;x
 kamiare;Kâmîare;;;;;;;;;;;;;x
 kanauji;Kanauji;Kanauji;Kanauji;;;;;;;;;;;x
 kannada;Kannada;Kannara;Kannada;;;;;;;;;;;x
 kanuri;Kanuri;Kanuri;Kanuri;;;;;;;;;;;x
+karelian;Karelian;;;;;;;;;;;;;x
 karen;Karen;Karen;Karen;;;;;;;;;;;x
 karachay_balkar;Karachay-Balkar;;;;;;;;;;;;;x
 karamanlides;Karamanlides;;;;;;;;;;;;;x
@@ -375,6 +378,7 @@ uzbek;Uzbek;Ouzbek;Usbekisch;;;;;;;;;;;x
 venezuelan;Venezuelan;;;;;;;;;;;;;x
 vietnamese;Vietnamese;Vietnamien;Vietnamesisch;;;;;;;;;;;x
 vilela;Waqha-umbael-te;;;;;;;;;;;;;x
+volga_german;Volga German;;;;;;;;;;;;;x
 wakhi;Wakhi;;;;;;;;;;;;;x
 wallonian;Walloon;;;;;;;;;;;;;x
 welsh;Welsh;;;;;;;;;;;;;x
