--- a/TGC/localisation/00_pop-culture.csv
+++ b/TGC/localisation/00_pop-culture.csv
@@ -129,7 +129,7 @@ formosan;Formosan;;;;;;;;;;;;;x
 french;French;Français;Französisch;;;;;;;;;;;x
 french_australian;French-Australasien;;;;;;;;;;;;;x
 french_canadian;French-Canadien;Franco-canadien;Frankokanadisch;;;;;;;;;;;x
-neolatin;Neolatin;;;;;;;;;;;;;x
+neolatin;Neo-latin;;;;;;;;;;;;;x
 frisian;Frisian;;;;;;;;;;;;;x
 fuegian;Fuegian;;;;;;;;;;;;;x
 fulbe;Fulbe;Fulbe;Fulbe;;;;;;;;;;;x
