started adding more pre-uprising flavor

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -867,11 +867,11 @@ money_hoarder_4_desc;You have too much money x4.;;;;;;;;;;;;;x
 money_hoarder_5;Money Hoarder 5;;;;;;;;;;;;;x
 money_hoarder_5_desc;You have too much money x5.;;;;;;;;;;;;;x
 monthly_payment_made;Yearly Payment;;;;;;;;;;;;;x
-monthly_payment_made_desc;We already contributed to our overlord’s coffers this month.;;;;;;;;;;;;;x
+monthly_payment_made_desc;We already contributed to our overlord's coffers this month.;;;;;;;;;;;;;x
 monument_under_construction;Under Construction;;;;;;;;;;;;;x
 monument_under_construction_desc;We are building a great project to celebrate our nation greatness.;;;;;;;;;;;;;x
 motala_verkstad;Motala Verkstad;;;;;;;;;;;;;x
-motala_verkstad_desc;Founded in 1822 by Baltazar von Platen during the building of the Göta Canal, Motala Verkstad is one of Sweden’s most renowned machine shops.;;;;;;;;;;;;;x
+motala_verkstad_desc;Founded in 1822 by Baltazar von Platen during the building of the Göta Canal, Motala Verkstad is one of Sweden's most renowned machine shops.;;;;;;;;;;;;;x
 muhammad_alis_reforms;Muhammad Ali’s Reforms;Réformes de Méhémet Ali;Muhammad Alis Reformen;;;;;;;;;;;x
 muhammad_alis_reforms_desc;We have instituted the reforms of Muhammad Ali and while these rapid advancements will slow down our technological progress in the short term, the benefits to our military and our overall efficiency will be invaluable.;;;;;;;;;;;;;x
 mulatto_modifier;Slave Tensions;;;;;;;;;;;;;x
