--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -449,6 +449,6 @@ restore_the_commonwealth_desc;Force the Russian Empire to recognize the independ
 restore_the_commonwealth_setup;Restore the Commonwealth;;;;;;;;;;;;;x
 restore_the_commonwealth_short;Restore the Commonwealth;;;;;;;;;;;;;x
 reclaim_the_commonwealth;Reclaim our Rightful Territories;;;;;;;;;;;;;x
-reclaim_the_commonwealth_desc;Reclaim the territories of the Commonwealth, our rightful lands.;;;;;;;;;;;;;x
+reclaim_the_commonwealth_desc;Reclaim the territories of the Commonwealth—our rightful lands.;;;;;;;;;;;;;x
 reclaim_the_commonwealth_setup;Reclaim Commonwealth Territories;;;;;;;;;;;;;x
 reclaim_the_commonwealth_short;Reclaim Commonwealth Territories;;;;;;;;;;;;;x
