--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -469,3 +469,4 @@ NORMAL_WAR_WEBSTER_ASHBURTON;The Aroostook War;;;;;;;;;;;;;x
 NORMAL_NEW_WORLD_HEGEMONY;$FIRST$–$SECOND$ War of New World's Hegemony;;;;;;;;;;;;;x
 AGRESSION_NEW_WORLD_HEGEMONY;$FIRST$–$SECOND$ War of New World's Hegemony;;;;;;;;;;;;;x
 NORMAL_WAR_POLAND_UPRISING;The Polish Uprising;;;;;;;;;;;;;x
+AGRESSION_WAR_RECLAIM_THE_COMMONWEALTH_NAME;The $ORDER$ War to Restore the Commonwealth;;;;;;;;;;;;;x
