--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -242,26 +242,18 @@ the_great_game_rus_setup;Expel British influence from Central Asia;;;;;;;;;;;;;x
 the_great_game_rus_short;Dominate Central Asia;;;;;;;;;;;;;x
 install_communism;Install Communism;Installez le communisme;Bringen Sie Kommunismus an;;;;;;;;;;;x
 install_communism_desc;Install a §Yfriendly communist government§W in the country’s capital;Install a §Yfriendly communist government§W in the country's capital;Install a §Yfriendly communist government§W in the country's capital;;;;;;;;;;;x
-install_allied_puppet_government;Install a Communist Puppet;;;;;;;;;;;;;x
-install_allied_puppet_government_desc;Install a §Ycommunist puppet government§W in the country’s capital;;;;;;;;;;;;;x
-install_allied_puppet_government_setup;Install a communist puppet government in $RECIPIENT$;;;;;;;;;;;;;x
-install_allied_puppet_government_short;Install a communist puppet government in $RECIPIENT$;;;;;;;;;;;;;x
+install_allied_puppet_government;Install an Aligned Puppet Government;;;;;;;;;;;;;x
+install_allied_puppet_government_desc;Install an Aligned Puppet government§W in the country’s capital;;;;;;;;;;;;;x
+install_allied_puppet_government_setup;Install an Aligned Puppet government in $RECIPIENT$;;;;;;;;;;;;;x
+install_allied_puppet_government_short;Install an Aligned Puppet government in $RECIPIENT$;;;;;;;;;;;;;x
 install_communism_setup;Install a communist government in $RECIPIENT$;Install a communist government in $RECIPIENT$;Install a communist government in $RECIPIENT$;;;;;;;;;;;x
 install_communism_short;Install a communist government in $RECIPIENT$;Install a communist government in $RECIPIENT$;Install a communist government in $RECIPIENT$;;;;;;;;;;;x
 install_democracy;Install Democracy;Installez la démocratie;Verursachen Sie Demokratie;;;;;;;;;;;x
 install_democracy_desc;Install a §Yfriendly democracy§W in the country’s capital;Install a §Yfriendly democracy§W in the target country's capital;Install a §Yfriendly democracy§W in the target country's capital;;;;;;;;;;;x
-install_allied_puppet_government;Install a Democratic Puppet;;;;;;;;;;;;;x
-install_allied_puppet_government_desc;Install a §Ydemocratic puppet government§W in the country’s capital;;;;;;;;;;;;;x
-install_allied_puppet_government_setup;Install a democratic puppet government in $RECIPIENT$;;;;;;;;;;;;;x
-install_allied_puppet_government_short;Install a democratic puppet government in $RECIPIENT$;;;;;;;;;;;;;x
 install_democracy_setup;Install a friendly democracy in $RECIPIENT$;Install a friendly democracy in $RECIPIENT$;Install a friendly democracy in $RECIPIENT$;;;;;;;;;;;x
 install_democracy_short;Install a friendly democracy in $RECIPIENT$;Install a friendly democracy in $RECIPIENT$;Install a friendly democracy in $RECIPIENT$;;;;;;;;;;;x
 install_fascism;Install Fascism;Installez le fascisme;Bringen Sie Faschismus an;;;;;;;;;;;x
 install_fascism_desc;Install a §Yfriendly fascist government§W in the country’s capital;Install a §Yfriendly fascist government§W in the country's capital;Install a §Yfriendly fascist government§W in the country's capital;;;;;;;;;;;x
-install_allied_puppet_government;Install a Fascist Puppet;;;;;;;;;;;;;x
-install_allied_puppet_government_desc;Install a §Yfascist puppet government§W in the country’s capital;;;;;;;;;;;;;x
-install_allied_puppet_government_setup;Install a fascist puppet government in $RECIPIENT$;;;;;;;;;;;;;x
-install_allied_puppet_government_short;Install a fascist puppet government in $RECIPIENT$;;;;;;;;;;;;;x
 install_fascism_setup;Install a fascist government in $RECIPIENT$;Install a fascist government in $RECIPIENT$;Install a fascist government in $RECIPIENT$;;;;;;;;;;;x
 install_fascism_short;Install a fascist government in $RECIPIENT$;Install a fascist government in $RECIPIENT$;Install a fascist government in $RECIPIENT$;;;;;;;;;;;x
 liberate_country;Liberate Country;;Befreit das Land;;;;;;;;;;;x
