LSK now exists, yay

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1150,7 +1150,7 @@ russian_army_education;Dmitry Milyutin’s Army Reform;;;;;;;;;;;;;x
 russian_army_education_desc;As part of Dmitry Milyutin’s Army Reforms, the system of military education was reformed, and elementary education was made available to all draftees.;;;;;;;;;;;;;x
 russian_protectionism;High Protectionism;;;;;;;;;;;;;
 russian_protectionism_desc;The aim of this policy is to have a country that is economically independent, relying on high importation tariffs to cover most expenses.;;;;;;;;;;;;;
-russoification;Russification;;;;;;;;;;;;;x
+russification;Russification;;;;;;;;;;;;;x
 sakoku;Sakoku;;;;;;;;;;;;;x
 sakoku_desc;Meaning ‘locked country’, this is the policy under which no foreigner could enter Japan under pain of death. Maintained by the Tokugawa shogunate, it has kept the nation in enforced isolation since the 17th century.;;;;;;;;;;;;;x
 salaverry_in_prison;Salaverry in prison;;;;;;;;;;;;;x
