added some loc for poland foreign aid

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -142,6 +142,34 @@ EVTOPTA500608;Education Buff;;;;;;;;;;;;;x
 EVTOPTB500608;Factory Buff;;;;;;;;;;;;;x
 EVTOPTC500608;Less Infamy;;;;;;;;;;;;;x
 EVTOPTD500608;Close;;;;;;;;;;;;;x
+EVTDESC500609;$FROMCOUNTRY$ has asked us, $COUNTRY$, for money. How much do we give them?;;;;;;;;;;;;;x
+EVTNAME500609;$FROMCOUNTRY_ADJ$ Request for a Loan;;;;;;;;;;;;;x
+EVTOPTA500609;We can't spare anything.;;;;;;;;;;;;;x
+EVTOPTB500609;Send a little bit to tide them over.;;;;;;;;;;;;;x
+EVTOPTC500609;Let us offer a decent-sized loan.;;;;;;;;;;;;;x
+EVTOPTD500609;We must support our $FROMCOUNTRY_ADJ$ friends.;;;;;;;;;;;;;x
+EVTDESC500610;$FROMCOUNTRY$ has asked us, $COUNTRY$, for money. How much do we give them?;;;;;;;;;;;;;x
+EVTNAME500610;$FROMCOUNTRY_ADJ$ Request for a Loan;;;;;;;;;;;;;x
+EVTOPTA500610;We can't spare anything.;;;;;;;;;;;;;x
+EVTOPTB500610;Send a little bit to tide them over.;;;;;;;;;;;;;x
+EVTOPTC500610;Let us offer a decent-sized loan.;;;;;;;;;;;;;x
+EVTOPTD500610;We must support our $FROMCOUNTRY_ADJ$ friends.;;;;;;;;;;;;;x
+EVTDESC500611;$FROMCOUNTRY$ has asked us, $COUNTRY$, for money. How much do we give them?;;;;;;;;;;;;;x
+EVTNAME500611;$FROMCOUNTRY_ADJ$ Request for a Loan;;;;;;;;;;;;;x
+EVTOPTA500611;We can't spare anything.;;;;;;;;;;;;;x
+EVTOPTB500611;Send a little bit to tide them over.;;;;;;;;;;;;;x
+EVTOPTC500611;Let us offer a decent-sized loan.;;;;;;;;;;;;;x
+EVTOPTD500611;We must support our $FROMCOUNTRY_ADJ$ friends.;;;;;;;;;;;;;x
+EVTDESC500612;Updates the modifier that shows the variables for the Red-White Struggle in Poland.;;;;;;;;;;;;;x
+EVTNAME500612;Red-White Modifier Updater;;;;;;;;;;;;;x
+EVTOPTA500612;Okay.;;;;;;;;;;;;;x
+EVTDESC500613;Updates the modifier that shows the variables for foreign influence in Poland.;;;;;;;;;;;;;x
+EVTNAME500613;Poland Foreign Influence Modifier Updater;;;;;;;;;;;;;x
+EVTOPTA500613;Okay.;;;;;;;;;;;;;x
+EVTDESC500614;$FROMCOUNTRY$ just nationalized all foreign-owned assets and kicked out our advisors—what should we do?;;;;;;;;;;;;;x
+EVTNAME500614;$FROMCOUNTRY$ Expels "Foreign Agents";;;;;;;;;;;;;x
+EVTOPTA500614;To war!;;;;;;;;;;;;;x
+EVTOPTB500614;We accept their decision.;;;;;;;;;;;;;x
 EVTDESC501114;20 years ago, our Empire rightfully claimed vast territories in Northwestern Pacific America. Various loyal servants of the Empire, explorers and merchants such as the famed Baranov and Rezanov, were keen on the idea of planting the Russian Imperial flag on as much of the Pacific as possible. They established several key trading posts in Alaska, California, Hawaii, and other islands. However, despite their successess, support from the central government was usually low, owing it to a cautious attitude of distant St. Petersburg, and even more cautious Tsar Paul. Tsar Aleksandr I curtailed Russian expansion in the area even further, concluding Russo-American Treaty of 1824 and Anglo-Russian Convention of 1825, giving up our claims south of the 54th parallel. However, maybe that was a mistake. Whispers in the government are again talking about opportunities along the sparsely settled Pacifican coast. Some say we should have listened to Mordvinov about California. Some say Nesselrode was right, it is a waste of resources and time. Whatever the Emperor decides, the Empire will follow.;;;;;;;;;;;;;x 
 EVTNAME501114;Claims in the Pacific;;;;;;;;;;;;;x
 EVTOPTA501114;Reassert our claims. Call Mordvinov back from retirement.;;;;;;;;;;;;;x
