--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -2342,7 +2342,7 @@ PROV2340;Nuestra Señora Santa María de la Asunción;;;;;;;;;;;;;x
 PROV2341;Anunciación de Itapúa;;;;;;;;;;;;;x
 PROV2342;Villa Real de la Concepción;;;;;;;;;;;;;x
 PROV2343;Ñu Pyahu;;;;;;;;;;;;;x
-PROV2344;Muy Fiel y Reconquistadora Ciudad de San Felipe y Santiago de Montevideo;;;;;;;;;;;;;x
+PROV2344;Montevideo;;;;;;;;;;;;;x
 PROV2345;Salto Oriental;;;;;;;;;;;;;x
 PROV2346;San Fructuoso;;;;;;;;;;;;;x
 PROV2347;Melo;;;;;;;;;;;;;x
