--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -70,3 +70,7 @@ not_mp;§!\nThis is §RNOT§! a multiplayer game, there's nobody to give you grants
 cant_do_while_at_war_or_no_vassals;§!You can't do this while at §Rwar§! or if you §Rhave no vassals§!.§b;;;;;;;;;;;;x
 cant_do_that_yet;§!You §RCAN NOT§! do again that yet!§b;;;;;;;;;;;;x
 locked_option;§!This option is §RLocked.§! for safety, unlock it before using.§b;;;;;;;;;;;;x
+renaming_half_y;Renamings will happen every §G6 months§!.§b;;;;;;;;;;;;x
+renaming_1_y;Renamings will happen §Gonce a year§!.§b;;;;;;;;;;;;x
+renaming_2_y;Renamings will happen every §G2 years§!.§b;;;;;;;;;;;;x
+renaming_5_y;Renamings will happen every §G5 years§!.§b;;;;;;;;;;;;x
