--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -23,11 +23,12 @@ EVTOPTC99;Asia;;;;;;;;;;;;;x
 EVTOPTD99;Africa;;;;;;;;;;;;;x
 EVTOPTE99;North & South America + Oceania;;;;;;;;;;;;;x
 EVTNAME59;TGC Setup Options;;;;;;;;;;;;;x
-EVTDESC59;Welcomes to TGC's Setup Menu! Here you have a couple of options:\n\n§BReset All Options:§!Sets all options to the correct Default Setting, basically resetting any change you made.\n§BExtra Random:§! Disables all and any Railroading and sets up Lucky Nations, aiming for the most unpredictable campaign possible.\n§BSee All Options:§!Take a look at every setup option individually and hand pick whatever you want.;;;;;;;;;;;;;x
+EVTDESC59;Welcomes to TGC's Setup Menu! Here you have a couple of options:\n\n§BReset All Options:§!Sets all options to the correct Default Setting, basically resetting any change you made.\n§BExtra Random:§! Disables all and any Railroading and sets up Lucky Nations, aiming for the most unpredictable campaign possible.\n§BSee All Options:§!Take a look at every setup option individually and hand pick whatever you want.\n§BRenaming Options:§!Change Province and State renaming configurations (This is also avaliable in the page 3 of the Utility Menu);;;;;;;;;;;;;x
 EVTOPTA59;Reset All Options.;;;;;;;;;;;;;x
 EVTOPTB59;Extra Random mode.;;;;;;;;;;;;;x
-EVTOPTC59;See All Options;;;;;;;;;;;;;x
-EVTOPTD59;I'm done with the setup.;;;;;;;;;;;;;x
+EVTOPTC59;Renaming options.;;;;;;;;;;;;;x
+EVTOPTD59;See All Options;;;;;;;;;;;;;x
+EVTOPTE59;I'm done with the setup.;;;;;;;;;;;;;x
 EVTNAME60;Setup Options, 1/4;;;;;;;;;;;;;x
 EVTDESC60;§BRailroading Menu§!: Open a menu with special options to control certain aspects of Railroading in the mod, stuff like forcing the ACW or the Crimea War to happen.\n§BEarly Crisis§!: In TGC, crisis only start after 1862, when Revolution and Counter-revolution is researched. Enabling Early Crisis will allow then to happen at any point. \n§BUK's Splendid Isolation§!: Historically the UK did not ally major european powers, and so in TGC the UK is forced to break alliances with any Great Powers who aren't Portugal, Belgium, Japan or the Ottomans. You may wish to turn this off. \n§BUSA African Colonization§!: USA has reduced influence in Africa, as historically the USA was not interested in Africa beyond Liberia. You may wish to remove this constraint. This will not affect an USA player.;;;;;;;;;;;;;x
 EVTOPTA60;Railroading Menu;;;;;;;;;;;;;x
@@ -142,3 +143,8 @@ EVTNAME76;The Grand Orchestra Menu, 3/3 ;;;;;;;;;;;;;x
 EVTDESC76;§BArgentinean songs enabled:§! Enables argentina-exclusive songs to play. Most Argentinean songs are already integrated into the default playlist, but they play less often than normal if you're not Argentina.\n\n§BJapanese Playlist Only:§! The Japanese playlist is extremely well curated, you may wish to only listen to it. This will mute all other songs.;;;;;;;;;;;;;x
 EVTOPTA76;Argentinean songs enabled;;;;;;;;;;;;;x
 EVTOPTB76;Japanese only playlist mode;;;;;;;;;;;;;x
+EVTNAME82;Renaming Menu;;;;;;;;;;;;;x
+EVTDESC82;In TGC, province and state renamings will happen automatically, by default, once per year. When this happen, all provinces in the world which has avaliable renamings will be renamed accordingly to it's owner.\n\n In this menu you can change the periodicity of the renaming or do a forced renaming of all provinces. The province renaming will cause a very small lag spike so the lowest periodicity is 6 months. For maximum perfomance turn it completely off, but having it running once a year has minimal perfomance impact.;;;;;;;;;;;;;x
+EVTOPTA82;Turn renaming ON/OFF.;;;;;;;;;;;;;x
+EVTOPTB82;Change renaming periodicity.;;;;;;;;;;;;;x
+EVTOPTC82;Force renaming.;;;;;;;;;;;;;x
