--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -144,7 +144,7 @@ EVTDESC76;§BArgentinean songs enabled:§! Enables argentina-exclusive songs to pl
 EVTOPTA76;Argentinean songs enabled;;;;;;;;;;;;;x
 EVTOPTB76;Japanese only playlist mode;;;;;;;;;;;;;x
 EVTNAME82;Renaming Menu;;;;;;;;;;;;;x
-EVTDESC82;In TGC, province and state renamings will happen automatically, by default, once per year. When this happen, all provinces in the world which has avaliable renamings will be renamed accordingly to it's owner.\n\n In this menu you can change the periodicity of the renaming or do a forced renaming of all provinces. The province renaming will cause a very small lag spike so the lowest periodicity is 6 months. For maximum perfomance turn it completely off, but having it running once a year has minimal perfomance impact.;;;;;;;;;;;;;x
+EVTDESC82;In TGC, §BProvince and State Renamings will happen §Gautomatically§!, by default, once per year. When this happen, all provinces in the world which has avaliable renamings will be renamed accordingly to it's owner.\n\n In this menu you can §Bchange the periodicity§! of the renaming, do a §Bforced renaming§! of all provinces, or §Bturn renaming completely off§!.\n\n The province renaming will cause a very minor lag spike so the lowest periodicity is 6 months. For maximum perfomance turn it completely off, but having it running once a year has minimal perfomance impact.\n\nChanging the periodicity will only take effect after the next triggering, so if you were using 5 year periods it will take up to 5 years to change to the new setting.;;;;;;;;;;;;;x
 EVTOPTA82;Turn renaming ON/OFF.;;;;;;;;;;;;;x
 EVTOPTB82;Change renaming periodicity.;;;;;;;;;;;;;x
 EVTOPTC82;Force renaming.;;;;;;;;;;;;;x
