--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -72,8 +72,7 @@ EVTOPTD65;See Tech School Change options (New decisions will appear in a day);;;
 EVTNAME66;Utility Options, 3/3;;;;;;;;;;;;;x
 EVTDESC66;\n§BBorder Control options:§! Allow you to pick a different border policy, at a cost, your options are Open Borders, Quota Immigration or Closed Borders.\n\n§BRGO Change (Mining)§!: Allow you to change your Mining provinces into different mined goods.\n\n§BRGO Change (Farming)§!: Allow you to change your farming provinces into different farmed goods.;;;;;;;;;;;;;x
 EVTOPTA66;Border Control options;;;;;;;;;;;;;x
-EVTOPTB66;RGO Change Menu (Mining);;;;;;;;;;;;;x
-EVTOPTC66;RGO Change Menu (Farming);;;;;;;;;;;;;x
+EVTOPTB66;RGO Change Menus;;;;;;;;;;;;;x
 EVTOPTD66;Music Mod Options;;;;;;;;;;;;;x
 EVTNAME67;Border Control options;;;;;;;;;;;;;x
 EVTDESC67;Pick whatever policy you want, but be aware: You will only be able to do that again after the §RLaw Changed by Force§! modifier goes away.;;;;;;;;;;;;;x
