--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3535,7 +3535,7 @@ claim_provincia_cisplatina_rgs_desc;Uruguay, once called Cisplatina, was a fello
 cisplatina_is_ours_title;Cisplatina is ours!;;;;;;;;;;;;;x
 cisplatina_is_ours_desc;We've secured our land back! Our south frontier is what it was once before.;;;;;;;;;;;;;x
 claim_paraguay_title;Take over Paraguay;;;;;;;;;;;;;x
-claim_paraguay_desc;Paraguay is defeat and under our complete control. This war is over. But perhaps this land can be of use for us, and besides, it's only natural to us to expand our influence into the Parana River frontier.;;;;;;;;;;;;;x
+claim_paraguay_desc;Paraguay is defeated and under our complete control. This war is over. But perhaps this land can be of use for us, and besides, it's only natural to us to expand our influence into the Parana River frontier.;;;;;;;;;;;;;x
 paraguay_is_ours_title;Paraguay is ours!;;;;;;;;;;;;;x
 paraguay_is_ours_desc;Paraguay has been firmly under our control for a long time, and is rightfully a brazilian state now. Time to rename cities, streets, and make that people brasilians de-facto;;;;;;;;;;;;;x
 disputed_territories_por_desc;Taken from Portugal in the 1809 Spanish-Portuguese war and the treaty of Badajoz, border territories such as Rubias and Olivenca were stripped from Portugal under the sanction of Napoleon. While the treaty of Vienna in 1815, signed by Spain, has included an obligation for Spain to return these territories, they have failed to do so. Thus, we must reclaim them ourselves.;;;;;;;;;;;;;x
