did some regions setup

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -725,6 +725,8 @@ CPL_prussian_constitutionalism;Poland;;;;;;;;;;;;;x
 CPL_presidential_dictatorship;Provisional National Government;;;;;;;;;;;;;x
 POL_colonial_company;Kingdom of Poland;;;;;;;;;;;;;x
 POL_dominion;Duchy of Warsaw;;;;;;;;;;;;;x
+POL_dominion2;Kingdom of Poland;;;;;;;;;;;;;x
+POL_dominion3;Viceroyalty of Poland;;;;;;;;;;;;;x
 POL_presidential_dictatorship;Provisional National Government;;;;;;;;;;;;;x
 CRB_absolute_monarchy;Caribbean Federation;;;;;;;;;;;;;x
 CRB_colonial_company;Leeward Islands Colony;;;;;;;;;;;;;x
