--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -297,7 +297,7 @@ RUS_940;Brêst;;;;;;;;;;;;;x
 RUS_943;Smolensk;;;;;;;;;;;;;x
 RUS_947;Mogilev;;;;;;;;;;;;;x
 AUS_950;Karpatenukraine;;;;;;;;;;;;;x
-RUS_954;Podol'ia;;;;;;;;;;;;;x
+RUS_954;Podolia;;;;;;;;;;;;;x
 RUS_958;Kiev;;;;;;;;;;;;;x
 RUS_959;Volyn;;;;;;;;;;;;;x
 RUS_962;Chernigov;;;;;;;;;;;;;x
@@ -305,6 +305,7 @@ RUS_964;Krym;;;;;;;;;;;;;x
 RUS_968;Kherson;;;;;;;;;;;;;x
 RUS_973;Tavrida;;;;;;;;;;;;;x
 RUS_974;Katerynoslavshchyna;;;;;;;;;;;;;x
+RUS_975;Poltava;;;;;;;;;;;;;x
 RUS_977;Kursk;;;;;;;;;;;;;x
 RUS_978;Kharkov;;;;;;;;;;;;;x
 RUS_979;Oblast Voyska Donskogo;;;;;;;;;;;;;x
