did what anzu wanted me to do

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -1007,7 +1007,7 @@ PROV1005;Velikiye Luki;;;;;;;;;;;;;x
 PROV1006;Pskov;;;;;;;;;;;;;x
 PROV1007;Nevel;;;;;;;;;;;;;x
 PROV1008;Moskva;;;;;;;;;;;;;x
-PROV1009;Borodino;;;;;;;;;;;;;x
+PROV1009;Mozhaysk;;;;;;;;;;;;;x
 PROV1010;Kaluga;;;;;;;;;;;;;x
 PROV1011;Tula;;;;;;;;;;;;;x
 PROV1012;Rjazan;;;;;;;;;;;;;x
