prov loc and renames changes

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -671,12 +671,12 @@ PROV669;Calarasi;;;;;;;;;;;;;x
 PROV670;Iasi;;;;;;;;;;;;;x
 PROV671;Botosani;;;;;;;;;;;;;x
 PROV672;Bacau;;;;;;;;;;;;;x
-PROV673;Kagulj;;;;;;;;;;;;;x
+PROV673;Kagul;;;;;;;;;;;;;x
 PROV674;Köstence;;;;;;;;;;;;;x
 PROV675;Sulina;;;;;;;;;;;;;x
-PROV676;Kishinjovu;;;;;;;;;;;;;x
-PROV677;Ak-Kermanu;;;;;;;;;;;;;x
-PROV678;Tuchkovu;;;;;;;;;;;;;x
+PROV676;Kishinyov;;;;;;;;;;;;;x
+PROV677;Ak-Kerman;;;;;;;;;;;;;x
+PROV678;Tuchkov;;;;;;;;;;;;;x
 PROV679;Kolberg;;;;;;;;;;;;;x
 PROV680;Köslin;;;;;;;;;;;;;x
 PROV681;Cüstrin;;;;;;;;;;;;;x
@@ -953,7 +953,7 @@ PROV951;Stryi;;;;;;;;;;;;;x
 PROV952;Tarnopol;;;;;;;;;;;;;x
 PROV953;Stanislau;;;;;;;;;;;;;x
 PROV954;Vinnitsa;;;;;;;;;;;;;x
-PROV955;Kamenets-Podoljskij;;;;;;;;;;;;;x
+PROV955;Kamenets-Podolskiy;;;;;;;;;;;;;x
 PROV956;Rovno;;;;;;;;;;;;;x
 PROV957;Kovel;;;;;;;;;;;;;x
 PROV958;Kiyev;;;;;;;;;;;;;x
@@ -979,13 +979,13 @@ PROV977;Kursk;;;;;;;;;;;;;x
 PROV978;Kharjkov;;;;;;;;;;;;;x
 PROV979;Novo-Cherkask;;;;;;;;;;;;;x
 PROV980;Rossoshi-Potudan;;;;;;;;;;;;;x
-PROV981;Arkhangeljsk;;;;;;;;;;;;;x
-PROV982;Pechengskij;;;;;;;;;;;;;x
+PROV981;Arkhangelsk;;;;;;;;;;;;;x
+PROV982;Pechengskiy;;;;;;;;;;;;;x
 PROV983;Porozero;;;;;;;;;;;;;x
 PROV984;Ukhtinskaja;;;;;;;;;;;;;x
 PROV985;Mezen;;;;;;;;;;;;;x
 PROV986;Oskinskaja;;;;;;;;;;;;;x
-PROV987;Ustj-Sysoljsku;;;;;;;;;;;;;x
+PROV987;Ust-Sysolskiy;;;;;;;;;;;;;x
 PROV988;Pudozh;;;;;;;;;;;;;x
 PROV989;Vologda;;;;;;;;;;;;;x
 PROV990;Velikij Ustjug;;;;;;;;;;;;;x
@@ -1016,7 +1016,7 @@ PROV1014;Ljudinovo;;;;;;;;;;;;;x
 PROV1015;Bryansk;;;;;;;;;;;;;x
 PROV1016;Starodub;;;;;;;;;;;;;x
 PROV1017;Oryol;;;;;;;;;;;;;x
-PROV1018;Bjelgorod;;;;;;;;;;;;;x
+PROV1018;Byelgorod;;;;;;;;;;;;;x
 PROV1019;Voronezh;;;;;;;;;;;;;x
 PROV1020;Nizhniy Novgorod;;;;;;;;;;;;;x
 PROV1021;Morshansk;;;;;;;;;;;;;x
@@ -1026,7 +1026,7 @@ PROV1024;Galich;;;;;;;;;;;;;x
 PROV1025;Tambov;;;;;;;;;;;;;x
 PROV1026;Perm;;;;;;;;;;;;;x
 PROV1027;Vetluga;;;;;;;;;;;;;x
-PROV1028;Vjatka;;;;;;;;;;;;;x
+PROV1028;Vyatka;;;;;;;;;;;;;x
 PROV1029;Glazov;;;;;;;;;;;;;x
 PROV1030;Kazan;;;;;;;;;;;;;x
 PROV1031;Sarapul;;;;;;;;;;;;;x
