added wool to fabric factory and fixed provname in bessarabia

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -675,7 +675,7 @@ PROV673;Kagul;;;;;;;;;;;;;x
 PROV674;Köstence;;;;;;;;;;;;;x
 PROV675;Sulina;;;;;;;;;;;;;x
 PROV676;Kishinyov;;;;;;;;;;;;;x
-PROV677;Ak-Kerman;;;;;;;;;;;;;x
+PROV677;Belgorod-Dnestrovskiy;;;;;;;;;;;;;x
 PROV678;Tuchkov;;;;;;;;;;;;;x
 PROV679;Kolberg;;;;;;;;;;;;;x
 PROV680;Köslin;;;;;;;;;;;;;x
