fixed some russian renames

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -953,10 +953,10 @@ PROV951;Stryi;;;;;;;;;;;;;x
 PROV952;Tarnopol;;;;;;;;;;;;;x
 PROV953;Stanislau;;;;;;;;;;;;;x
 PROV954;Vinnitsa;;;;;;;;;;;;;x
-PROV955;Kamenets-Podoljskij;;;;;;;;;;;;;x
+PROV955;Kamenets-Podolskiy;;;;;;;;;;;;;x
 PROV956;Rovno;;;;;;;;;;;;;x
 PROV957;Kovel;;;;;;;;;;;;;x
-PROV958;Kijev;;;;;;;;;;;;;x
+PROV958;Kiyev;;;;;;;;;;;;;x
 PROV959;Zhitomir;;;;;;;;;;;;;x
 PROV960;Berdychev;;;;;;;;;;;;;x
 PROV961;Uman;;;;;;;;;;;;;x
@@ -968,36 +968,36 @@ PROV966;Kerchj-Jenikol;;;;;;;;;;;;;x
 PROV967;Sevastopol;;;;;;;;;;;;;x
 PROV968;Odessa;;;;;;;;;;;;;x
 PROV969;Tiraspol;;;;;;;;;;;;;x
-PROV970;Nikolajev;;;;;;;;;;;;;x
-PROV971;Jelisavetgrad;;;;;;;;;;;;;x
+PROV970;Nikolayev;;;;;;;;;;;;;x
+PROV971;Yelisavetgrad;;;;;;;;;;;;;x
 PROV972;Poltava;;;;;;;;;;;;;x
-PROV973;Melitopol;;;;;;;;;;;;;x
-PROV974;Jekaterinoslavl;;;;;;;;;;;;;x
-PROV975;Jeleno-Aleksandrovka;;;;;;;;;;;;;x
+PROV973;Novooleksandrivka;;;;;;;;;;;;;x
+PROV974;Yekaterinoslav;;;;;;;;;;;;;x
+PROV975;Aleksandrovka;;;;;;;;;;;;;x
 PROV976;Mariupol;;;;;;;;;;;;;x
 PROV977;Kursk;;;;;;;;;;;;;x
-PROV978;Kharjkov;;;;;;;;;;;;;x
+PROV978;Kharkov;;;;;;;;;;;;;x
 PROV979;Novo-Cherkask;;;;;;;;;;;;;x
 PROV980;Rossoshi-Potudan;;;;;;;;;;;;;x
-PROV981;Arkhangeljsk;;;;;;;;;;;;;x
-PROV982;Pechengskij;;;;;;;;;;;;;x
+PROV981;Arkhangelsk;;;;;;;;;;;;;x
+PROV982;Pechenga;;;;;;;;;;;;;x
 PROV983;Porozero;;;;;;;;;;;;;x
-PROV984;Ukhtinskaja;;;;;;;;;;;;;x
+PROV984;Ukhta;;;;;;;;;;;;;x
 PROV985;Mezen;;;;;;;;;;;;;x
 PROV986;Oskinskaja;;;;;;;;;;;;;x
-PROV987;Ustj-Sysoljsku;;;;;;;;;;;;;x
+PROV987;Ust-Sysolsk;;;;;;;;;;;;;x
 PROV988;Pudozh;;;;;;;;;;;;;x
 PROV989;Vologda;;;;;;;;;;;;;x
-PROV990;Velikij Ustjug;;;;;;;;;;;;;x
-PROV991;Totjma;;;;;;;;;;;;;x
-PROV992;Bjelozersk;;;;;;;;;;;;;x
+PROV990;Velikiy Ustjug;;;;;;;;;;;;;x
+PROV991;Totma;;;;;;;;;;;;;x
+PROV992;Byelozersk;;;;;;;;;;;;;x
 PROV993;Vytegra;;;;;;;;;;;;;x
-PROV994;Sankt Peterburg;;;;;;;;;;;;;x
+PROV994;Sankt-Peterburg;;;;;;;;;;;;;x
 PROV995;Petrozavodsk;;;;;;;;;;;;;x
-PROV996;Jamburg;;;;;;;;;;;;;x
+PROV996;Yamburg;;;;;;;;;;;;;x
 PROV997;Gdov;;;;;;;;;;;;;x
 PROV998;Tver;;;;;;;;;;;;;x
-PROV999;Vjazjma;;;;;;;;;;;;;x
+PROV999;Vyazma;;;;;;;;;;;;;x
 PROV1000;Rzhev;;;;;;;;;;;;;x
 PROV1001;Yaroslavl;;;;;;;;;;;;;x
 PROV1002;Manzhouli;;;;;;;;;;;;;x
