--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -70,15 +70,15 @@ ENG_263;Leinster;;;;;;;;;;;;;x
 ENG_266;Highlands;;;;;;;;;;;;;x
 ENG_271;Lowlands;;;;;;;;;;;;;x
 ENG_273;Wales;;;;;;;;;;;;;x
-ENG_277;North West England;;;;;;;;;;;;;x
+ENG_277;Northwest England;;;;;;;;;;;;;x
 ENG_280;North England;;;;;;;;;;;;;x
 ENG_281;Yorkshire;;;;;;;;;;;;;x
 ENG_284;West Midlands;;;;;;;;;;;;;x
 ENG_288;North Midlands;;;;;;;;;;;;;x
 ENG_291;South Midlands;;;;;;;;;;;;;x
 ENG_292;East England;;;;;;;;;;;;;x
-ENG_296;South West England;;;;;;;;;;;;;x
-ENG_300;South East England;;;;;;;;;;;;;x
+ENG_296;Southwest England;;;;;;;;;;;;;x
+ENG_300;Southeast England;;;;;;;;;;;;;x
 ENG_304;Isle of Man;;;;;;;;;;;;;x
 ENG_419;Channel Islands;;;;;;;;;;;;;x
 SWE_308;Nordnorge;;;;;;;;;;;;;x
@@ -312,7 +312,7 @@ RUS_980;Voronezh;;;;;;;;;;;;;x
 RUS_981;Arkhangelsk;;;;;;;;;;;;;x
 RUS_984;Kareliya;;;;;;;;;;;;;x
 RUS_990;Galich;;;;;;;;;;;;;x
-RUS_994;St. Peterburg;;;;;;;;;;;;;x
+RUS_994;Sankt-Peterburg;;;;;;;;;;;;;x
 RUS_998;Tver;;;;;;;;;;;;;x
 RUS_1003;Novgorod;;;;;;;;;;;;;x
 RUS_1005;Pskov;;;;;;;;;;;;;x
