--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -671,12 +671,12 @@ PROV669;Calarasi;;;;;;;;;;;;;x
 PROV670;Iasi;;;;;;;;;;;;;x
 PROV671;Botosani;;;;;;;;;;;;;x
 PROV672;Bacau;;;;;;;;;;;;;x
-PROV673;Kagulj;;;;;;;;;;;;;x
+PROV673;Kagul;;;;;;;;;;;;;x
 PROV674;Köstence;;;;;;;;;;;;;x
 PROV675;Sulina;;;;;;;;;;;;;x
-PROV676;Kishinjovu;;;;;;;;;;;;;x
-PROV677;Ak-Kermanu;;;;;;;;;;;;;x
-PROV678;Tuchkovu;;;;;;;;;;;;;x
+PROV676;Kishinjov;;;;;;;;;;;;;x
+PROV677;Belgorod-Dnestrovskiy;;;;;;;;;;;;;x
+PROV678;Tuchkov;;;;;;;;;;;;;x
 PROV679;Kolberg;;;;;;;;;;;;;x
 PROV680;Köslin;;;;;;;;;;;;;x
 PROV681;Cüstrin;;;;;;;;;;;;;x
@@ -942,7 +942,7 @@ PROV940;Brest-Litovsk;;;;;;;;;;;;;x
 PROV941;Luninets;;;;;;;;;;;;;x
 PROV942;Pinsk;;;;;;;;;;;;;x
 PROV943;Smolensk;;;;;;;;;;;;;x
-PROV944;Mogiljov;;;;;;;;;;;;;x
+PROV944;Mogilyov;;;;;;;;;;;;;x
 PROV945;Vitebsk;;;;;;;;;;;;;x
 PROV946;Krichev;;;;;;;;;;;;;x
 PROV947;Molodechno;;;;;;;;;;;;;x
@@ -1007,16 +1007,16 @@ PROV1005;Velikiye Luki;;;;;;;;;;;;;x
 PROV1006;Pskov;;;;;;;;;;;;;x
 PROV1007;Nevel;;;;;;;;;;;;;x
 PROV1008;Moskva;;;;;;;;;;;;;x
-PROV1009;Borodino;;;;;;;;;;;;;x
+PROV1009;Mozhaysk;;;;;;;;;;;;;x
 PROV1010;Kaluga;;;;;;;;;;;;;x
 PROV1011;Tula;;;;;;;;;;;;;x
-PROV1012;Rjazan;;;;;;;;;;;;;x
+PROV1012;Ryazan;;;;;;;;;;;;;x
 PROV1013;Vladimir;;;;;;;;;;;;;x
-PROV1014;Ljudinovo;;;;;;;;;;;;;x
+PROV1014;Lyudinovo;;;;;;;;;;;;;x
 PROV1015;Bryansk;;;;;;;;;;;;;x
 PROV1016;Starodub;;;;;;;;;;;;;x
 PROV1017;Oryol;;;;;;;;;;;;;x
-PROV1018;Bjelgorod;;;;;;;;;;;;;x
+PROV1018;Belgorod;;;;;;;;;;;;;x
 PROV1019;Voronezh;;;;;;;;;;;;;x
 PROV1020;Nizhniy Novgorod;;;;;;;;;;;;;x
 PROV1021;Morshansk;;;;;;;;;;;;;x
@@ -1026,7 +1026,7 @@ PROV1024;Galich;;;;;;;;;;;;;x
 PROV1025;Tambov;;;;;;;;;;;;;x
 PROV1026;Perm;;;;;;;;;;;;;x
 PROV1027;Vetluga;;;;;;;;;;;;;x
-PROV1028;Vjatka;;;;;;;;;;;;;x
+PROV1028;Vyatka;;;;;;;;;;;;;x
 PROV1029;Glazov;;;;;;;;;;;;;x
 PROV1030;Kazan;;;;;;;;;;;;;x
 PROV1031;Sarapul;;;;;;;;;;;;;x
