--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -964,7 +964,7 @@ PROV962;Chernigov;;;;;;;;;;;;;x
 PROV963;Lubny;;;;;;;;;;;;;x
 PROV964;Simferopol;;;;;;;;;;;;;x
 PROV965;Kakhovka;;;;;;;;;;;;;x
-PROV966;Kerchj-Jenikol;;;;;;;;;;;;;x
+PROV966;Kerch;;;;;;;;;;;;;x
 PROV967;Sevastopol;;;;;;;;;;;;;x
 PROV968;Odessa;;;;;;;;;;;;;x
 PROV969;Tiraspol;;;;;;;;;;;;;x
